HTML generation API for MS

--- a/app/index.html
+++ b/app/index.html
@@ -20,14 +20,7 @@
         <![endif]-->
 
 
-        <div class="hero-unit">
-          <h1>'Allo, 'Allo!</h1>
-          <p>You now have</p>
-          <ul>
-            <li>HTML5 Boilerplate</li>
-            <li>Modernizr</li>
-            <li>RequireJS</li>
-          </ul>
+        <div class="hero-unit" id="welcome">
         </div>
 
 
@@ -49,7 +42,7 @@
         </script>
 
         <!-- build:js scripts/main.js -->
-        <script data-main="scripts/compiled/main" src="scripts/vendor/require.js"></script>
+        <script data-main="scripts/main" src="scripts/vendor/require.js"></script>
         <!-- endbuild -->
 </body>
 </html>
