--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
 
         <title>Tantamanlands</title>
 
-        <link
-            rel="icon"
-            type="image/png"
-            href="svelte-site/public/favicon.png"
-        />
-        <link rel="stylesheet" href="svelte-site/public/global.css" />
-        <link rel="stylesheet" href="svelte-site/public/build/bundle.css" />
+        <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="stylesheet" href="global.css" />
+        <link rel="stylesheet" href="build/bundle.css" />
 
-        <script defer src="svelte-site/public/build/bundle.js"></script>
+        <script defer src="build/bundle.js"></script>
     </head>
 
     <body></body>
