--- a/blog2/prototype/index.html
+++ b/blog2/prototype/index.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-	<svg id="nav"></svg>
+	<div id="nav" />
 	<script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
