--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./main.ts"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="site"></div>
   </body>
 </html>
