--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         padding: 0px;
         margin: 0px;
       }
+
+      iframe {
+        border: 0;
+      }
     </style>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
