--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      html,
-      body {
-        padding: 0px;
-        margin: 0px;
-      }
-
-      iframe {
-        border: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="/index.css" />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Tantamanlands</title>
