--- a/redesign/stub2.html
+++ b/redesign/stub2.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Hearth</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cardo:wght@400;700&display=swap"
-    rel="stylesheet" />
+  <!-- In your HTML head section -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=IM+Fell+English+SC&display=swap"
+    rel="stylesheet">
+
   <style>
     :root {
       --bg: #1a120e;
@@ -28,20 +31,20 @@
 
     body {
       margin: 0;
-      font-family: "Cardo", Georgia, "Times New Roman", serif;
+      font-family: 'Cormorant Garamond', 'IM Fell English', serif;
+      /* font-family: "Cardo", Georgia, "Times New Roman", serif; */
       background: var(--bg) url("./bg-fire.png") center / cover fixed;
       color: var(--text);
       min-height: 100vh;
       position: relative;
     }
 
+    /* Header Styling */
     header {
-      position: sticky;
       top: 0;
       z-index: 100;
-      backdrop-filter: blur(6px);
-      background: rgba(26, 18, 14, 0.8);
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+      letter-spacing: 0.05em;
+      text-transform: lowercase;
     }
 
     header .container {
@@ -58,15 +61,18 @@
       color: inherit;
     }
 
+
+    /* Navigation Links */
     nav a {
-      margin-left: 1.5rem;
+      color: #f4e9d8;
+      margin: 0 1.2rem;
       text-decoration: none;
-      color: var(--text);
-      transition: color 0.3s;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
-      color: var(--accent);
+      color: #d6a354;
+      /* warm ember gold */
     }
 
     section {
@@ -90,14 +96,9 @@
       user-select: none;
     }
 
-    h1 {
-      font-family: "Cinzel", "Cardo", Georgia, serif;
-    }
-
     #hero h2 {
       margin-top: 2rem;
       font-size: clamp(2.5rem, 5vw, 4rem);
-      font-family: "Cinzel", "Cardo", Georgia, serif;
       font-weight: 700;
       letter-spacing: 0.05em;
     }
@@ -142,12 +143,12 @@
       padding: 1.75rem 1.5rem;
       border-radius: 1rem;
       border: 1px solid rgba(217, 106, 55, 0.25);
-      clip-path: polygon(0% 8%, 3% 2%, 10% 0%, 18% 3%, 26% 1%, 34% 4%, 42% 0%, 50% 3%,
+      /* clip-path: polygon(0% 8%, 3% 2%, 10% 0%, 18% 3%, 26% 1%, 34% 4%, 42% 0%, 50% 3%,
           58% 1%, 66% 4%, 74% 0%, 82% 2%, 90% 0%, 97% 6%, 100% 14%, 98% 24%,
           100% 32%, 97% 40%, 100% 50%, 98% 60%, 100% 70%, 97% 78%, 100% 88%,
           96% 96%, 88% 100%, 80% 97%, 72% 100%, 64% 96%, 56% 100%, 48% 98%,
           40% 100%, 32% 97%, 24% 100%, 16% 96%, 8% 98%, 0% 92%, 2% 82%,
-          0% 74%, 3% 66%, 0% 56%, 2% 48%, 0% 38%, 3% 30%, 0% 20%);
+          0% 74%, 3% 66%, 0% 56%, 2% 48%, 0% 38%, 3% 30%, 0% 20%); */
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       overflow: hidden;
@@ -178,13 +179,13 @@
     .card h4 {
       margin: 0 0 0.5rem;
       font-size: 1.3rem;
-      font-family: "Cinzel", "Cardo", serif;
+      /* font-family: "Cinzel", "Cardo", serif; */
     }
 
     .card p {
       margin: 0;
       color: var(--text-muted);
-      font-family: "Cardo", Georgia, serif;
+      /* font-family: "Cardo", Georgia, serif; */
     }
 
     footer {
@@ -227,29 +228,9 @@
 </head>
 
 <body>
-  <svg width="0" height="0" style="position:absolute">
-    <defs>
-      <!-- use objectBoundingBox units so 0‑1 coordinates scale with the element -->
-      <clipPath id="burned-edge" clipPathUnits="objectBoundingBox">
-        <path d="
-        M0,0.04  L0.05,0   L0.10,0.06  L0.15,0.015  L0.22,0.07  L0.28,0  
-        L0.35,0.03 L0.42,0  L0.50,0.05  L0.58,0.01  L0.64,0.045 L0.72,0
-        L0.80,0.05 L0.87,0.015 L0.94,0.07 L1,0.03   /* ── top edge ── */
-
-        L1,0.88  L0.97,0.91  L0.91,0.97  L0.85,0.935  L0.78,0.995
-        L0.71,0.92  L0.64,0.975 L0.57,0.93   L0.50,1    /* ── right edge ── */
-
-        L0.43,0.96  L0.37,1   L0.30,0.97  L0.23,1   L0.16,0.94
-        L0.09,0.98  L0.03,0.945  L0,0.97            /* ── bottom edge ── */
-
-        Z                                            /* closes left edge */
-      " />
-      </clipPath>
-    </defs>
-  </svg>
   <header>
     <div class="container">
-      <h1><a href="#">The&nbsp;Hearth</a></h1>
+      <h1><a href="#">Tantaman</a></h1>
       <nav>
         <a href="#blog">Blog</a>
         <a href="#stories">Stories</a>
@@ -263,8 +244,8 @@
   <main>
     <section id="hero">
       <img src="../docs/img/avatar-angry.png" alt="Stoic guardian meditating" />
-      <h2>Words&nbsp;Forged&nbsp;in&nbsp;Fire</h2>
-      <p>A journal of tales, reflections, and evolving ideas.</p>
+      <!-- <h2>Words&nbsp;Forged&nbsp;in&nbsp;Fire</h2> -->
+      <p>tales, reflections, and evolving ideas.</p>
     </section>
 
     <section id="blog">
@@ -289,7 +270,7 @@
 
     <section id="stories">
       <div class="container">
-        <h3 class="section-title">Short Stories</h3>
+        <h3 class="section-title">Stories</h3>
         <div class="grid">
           <div class="card">
             <h4>Coming soon</h4>
