--- a/redesign/stub2.html
+++ b/redesign/stub2.html
@@ -136,44 +136,14 @@
 
     .card {
       cursor: pointer;
-      position: relative;
-      background: radial-gradient(circle at 50% 30%,
-          rgba(217, 106, 55, 0.18) 0%,
-          var(--bg-soft) 75%);
-      padding: 1.75rem 1.5rem;
-      border-radius: 1rem;
-      border: 1px solid rgba(217, 106, 55, 0.25);
-      /* clip-path: polygon(0% 8%, 3% 2%, 10% 0%, 18% 3%, 26% 1%, 34% 4%, 42% 0%, 50% 3%,
-          58% 1%, 66% 4%, 74% 0%, 82% 2%, 90% 0%, 97% 6%, 100% 14%, 98% 24%,
-          100% 32%, 97% 40%, 100% 50%, 98% 60%, 100% 70%, 97% 78%, 100% 88%,
-          96% 96%, 88% 100%, 80% 97%, 72% 100%, 64% 96%, 56% 100%, 48% 98%,
-          40% 100%, 32% 97%, 24% 100%, 16% 96%, 8% 98%, 0% 92%, 2% 82%,
-          0% 74%, 3% 66%, 0% 56%, 2% 48%, 0% 38%, 3% 30%, 0% 20%); */
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      overflow: hidden;
-    }
-
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      border-radius: inherit;
-      pointer-events: none;
-      background: radial-gradient(circle at 50% 0%,
-          rgba(217, 106, 55, 0.28) 0%,
-          transparent 70%);
-      opacity: 0;
-      transition: opacity 0.3s ease;
+      margin-bottom: 2.5rem;
+      color: #f4e9d8;
+      font-size: 1.2rem;
+      transition: text-shadow 0.3s ease;
     }
 
     .card:hover {
-      transform: translateY(-6px) scale(1.03);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6), 0 0 18px rgba(217, 106, 55, 0.45);
-    }
-
-    .card:hover::before {
-      opacity: 1;
+      text-shadow: 0 0 10px #d6a354;
     }
 
     .card h4 {
@@ -352,11 +322,6 @@
       </div>
     </section>
   </main>
-
-  <footer>
-    ©
-    <script>document.write(new Date().getFullYear())</script> The&nbsp;Hearth. All rights reserved.
-  </footer>
 
   <script>
     /* Utility to grab a random float in range */
